--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -1,13 +1,3 @@
-#loader
-{
-    position: fixed;
-    z-index: 9999999;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    background: url('https://unitedfinancialtrust.org/assets/loader.gif') 50% 50% no-repeat #f9f9f9;
-}
 
 .the-mobile-nav{
  display: none;
@@ -202,9 +192,36 @@ height: 600px;
 margin-left: 5.5%;
 }
 .the-logo-nav0{
- margin-left: 29%;
+ margin-left: none;
+}
+.the-logo-nav0 .img {
+    background-color: transparent;
+    width: 70%;
+    float: left;
+}.the-logo-nav0 .img img{
+    margin-left: 16%;
+    box-shadow: 0px 0px 5px white;
+}
+.the-cancel-button{
+    width: 30%;
+    height: 55px;
+    float: left;
+    background-color: transparent;
+}.the-cancel-button button{
+    height: 50px;
+    margin-top: none;
+    width: 47px;
+    box-shadow: 0px 0px 3px white;
+    float: right;
+    margin-right: 10px;
+    border: none;
+    background-color: transparent;
+    color: white;
+    font-family: sans-serif;
+    font-size: 40px;
 }
 .the-nav-item{
+    clear: both;
  width: 100%;
  margin-top: 15px;
 }.the-nav-item a{
