--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -209,9 +209,9 @@ margin-left: 5.5%;
     background-color: transparent;
 }.the-cancel-button button{
     height: 50px;
+    text-align: center;
     margin-top: none;
     width: 47px;
-    text-align:center;
     box-shadow: 0px 0px 3px white;
     float: right;
     margin-right: 10px;
@@ -220,6 +220,8 @@ margin-left: 5.5%;
     color: white;
     font-family: sans-serif;
     font-size: 40px;
+}.the-cancel-button button span{
+    text-align: center;
 }
 .the-nav-item{
     clear: both;
