--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -211,7 +211,7 @@ margin-left: 5.5%;
     height: 50px;
     text-align: center;
     margin-top: none;
-    width: 47px;
+    width: auto;
     box-shadow: 0px 0px 3px white;
     float: right;
     margin-right: 10px;
