--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -213,7 +213,8 @@ margin-left: 5.5%;
     text-align: center;
     margin-top: 0;
     width: 50px;
-    box-shadow: 0px 0px 3px white;
+ box-shadow: 0px 0px 3px white;
+    -webkit-box-shadow: 0px 0px 3px white;
     float: right;
     margin-right: 10px;
     border: none;
@@ -221,6 +222,7 @@ margin-left: 5.5%;
     color: white;
     font-family: sans-serif;
     font-size: 30px;
+ transform: translateZ(0);
 }.the-cancel-button button span{
     text-align: center;
 }
