--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -204,11 +204,13 @@ margin-left: 5.5%;
 }
 .the-cancel-button{
     width: 30%;
+ display:block;
     height: 55px;
     float: left;
     background-color: transparent;
 }.the-cancel-button button{
     height: 50px;
+ display:block;
     box-sizing:border-box;
     text-align: center;
     margin-top: 0;
