--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -207,7 +207,7 @@ margin-left: 5.5%;
  display:block;
     height: 55px;
     float: left;
-    background-color: transparent;
+    background-color: red;
 }.the-cancel-button button{
     height: 50px;
  display:block;
