--- a/hondelbankhome.css
+++ b/hondelbankhome.css
@@ -207,7 +207,7 @@ margin-left: 5.5%;
  display:block;
     height: 55px;
     float: left;
-    background-color: red;
+    background-color: transparent;
 }.the-cancel-button button{
     height: 50px;
  display:block;
@@ -215,12 +215,11 @@ margin-left: 5.5%;
     text-align: center;
     margin-top: 0;
     width: 50px;
- box-shadow: 0px 0px 3px white;
-    -webkit-box-shadow: 0px 0px 3px white;
+ 
     float: right;
     margin-right: 10px;
     border: none;
-    background-color: yellow;
+    background-color: transparent;
     color: white;
     font-family: sans-serif;
     font-size: 30px;
